scopes, mejorar documentación y agregar myvacancies y eliminar logout
